--- a/java-a-to-z/pom.xml
+++ b/java-a-to-z/pom.xml
@@ -1,7 +1,10 @@
 <project>
     <modelVersion>4.0.0</modelVersion>
-    <groupId>ru.thay</groupId>
+     <groupId>ru.job4j</groupId>
     <artifactId>java-a-to-z</artifactId>
-    <packaging>jar</packaging>
+    <packaging>pom</packaging>
     <version>1.0</version>
+<modules>
+<module>chapter_001</module>
+</modules>
 </project>
