--- a/java-a-to-z/pom.xml
+++ b/java-a-to-z/pom.xml
@@ -4,6 +4,20 @@
     <artifactId>java-a-to-z</artifactId>
     <packaging>pom</packaging>
     <version>1.0</version>
+<dependencies>
+    <dependency>
+        <groupId>org.hamcrest</groupId>
+        <artifactId>hamcrest-all</artifactId>
+        <version>1.3</version>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.12</version>
+        <scope>test</scope>
+    </dependency>
+</dependencies>
 <modules>
 <module>chapter_001</module>
 </modules>
